tests/ui/subcommand_opt_opt.stderr
error: proc-macro derive panicked
  --> $DIR/subcommand_opt_opt.rs:11:10
   |
11 | #[derive(StructOpt)]
   |          ^^^^^^^^^
   |
   = help: message: Option<Option<T>> type is not allowed for subcommand
